--- a/index.html
+++ b/index.html
@@ -5,8 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AULA 11</title>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="container"></div>
+<div class="row mt-5">
+    <h2>
+        Flash
+    </h2>
+    <p>
+        rjhwfrgerfhbsbfiwylge3y2gdvupwo
+    </p>
+</div>
+<div class="col-lg-6 col-12">
+    <img src="FB1jIHFX0AI6OTy (1).jpg" alt="" class="img-fluid">
+</div>
+</div> <!--Fim sessão mecânica-->
+<div class="row mt-5">
+<h2 id="empresa" class="text-center mb-5">
+    A Empresa
+</h2>
+<div class="col-lg-6 col-12">
+    <h2>
+        bnvsbfvcsgvghcschbsb
+    </h2>
+    <p>
+     jhugdyfjastrdgarwtfgtwaftgfwafd
+    </p>
+</div>
+<div class="col-lg-6 col-12">
+    <img src="" alt="" class="img-fluid">
+</div>
+</div> <!--Fim sessão empresa-->
+<div class="row mt-5">
+<h2 id="servicos" class="text-center mb-5">
+    Nossos serviços
+</h2>
+<div class="col-12 col-md-6 col-lg-4 mb-5">
+    <div class="card mx-auto" style="width: 18rem;">
+        <img src="" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Sistema de Embreagem</h5>
+          <p class="card-text">fgedawfdhwfadytawdgctywarewter.</p>
+        </div>
+      </div>
+</div>
+<div class="col-12 col-md-6 col-lg-4 mb-5">
+    <div class="card mx-auto" style="width: 18rem;">
+        <img src="" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">wkfhgwyet2yte2fgseurt2o</h5>
+          <p class="card-text">jqghrgywgeiy3.</p>
+        </div>
+      </div>
+</div>
+</div>
+<div class="col-12 col-md-6 col-lg-4 mb-5">
+    <div class="card mx-auto" style="width: 18rem;">
+        <img src="" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Revisão Completa do Sistema de Freio</h5>
+          <p class="card-text">.</p>
+        </div>
+      </div>
+</div>
+<div class="col-12 col-md-6 col-lg-4 mb-5">
+    <div class="card mx-auto" style="width: 18rem;">
+        <img src="Imagens/Serviços/suspensao.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text">.</p>
+        </div>
+      </div>
+</div>
+<div class="col-12 col-md-6 col-lg-4 mb-5">
+    <div class="card mx-auto" style="width: 18rem;">
+        <img src="Imagens/Serviços/ar condicionado.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title"></h5>
+          <p class="card-text"></p>
+        </div>
+      </div>
+</div>
 </body>
 </html>
